examples/atm-lang/fsmc/frontend_antlr/generated/FsmParser.py
# Generated from Fsm.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FsmParser ( Parser ):

    grammarFileName = "Fsm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'machine'", "'const'", "':'", "'='", 
                     "'context'", "'{'", "','", "'}'", "'events'", "'('", 
                     "')'", "'states'", "'initial'", "'terminal'", "'action'", 
                     "'ignore'", "'|'", "'else'", "'['", "']'", "'/'", "'say'", 
                     "'if'", "'-'", "'*'", "'%'", "'+'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'not'", "'and'", "'or'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ARROW", "DASHES", 
                      "ID", "INT", "STRING", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_constDecl = 2
    RULE_contextDecl = 3
    RULE_field = 4
    RULE_eventsDecl = 5
    RULE_eventSig = 6
    RULE_params = 7
    RULE_param = 8
    RULE_statesDecl = 9
    RULE_initialDecl = 10
    RULE_terminalDecl = 11
    RULE_idList = 12
    RULE_actionDecl = 13
    RULE_transition = 14
    RULE_triggers = 15
    RULE_trigger = 16
    RULE_pattern = 17
    RULE_guard = 18
    RULE_calls = 19
    RULE_call = 20
    RULE_block = 21
    RULE_stmt = 22
    RULE_assignStmt = 23
    RULE_sayStmt = 24
    RULE_ifStmt = 25
    RULE_expr = 26

    ruleNames =  [ "program", "decl", "constDecl", "contextDecl", "field", 
                   "eventsDecl", "eventSig", "params", "param", "statesDecl", 
                   "initialDecl", "terminalDecl", "idList", "actionDecl", 
                   "transition", "triggers", "trigger", "pattern", "guard", 
                   "calls", "call", "block", "stmt", "assignStmt", "sayStmt", 
                   "ifStmt", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    ARROW=39
    DASHES=40
    ID=41
    INT=42
    STRING=43
    COMMENT=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def EOF(self):
            return self.getToken(FsmParser.EOF, 0)

        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.DeclContext)
            else:
                return self.getTypedRuleContext(FsmParser.DeclContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FsmParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(FsmParser.T__0)
            self.state = 55
            localctx.name = self.match(FsmParser.ID)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199023317540) != 0):
                self.state = 56
                self.decl()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(FsmParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constDecl(self):
            return self.getTypedRuleContext(FsmParser.ConstDeclContext,0)


        def contextDecl(self):
            return self.getTypedRuleContext(FsmParser.ContextDeclContext,0)


        def eventsDecl(self):
            return self.getTypedRuleContext(FsmParser.EventsDeclContext,0)


        def statesDecl(self):
            return self.getTypedRuleContext(FsmParser.StatesDeclContext,0)


        def initialDecl(self):
            return self.getTypedRuleContext(FsmParser.InitialDeclContext,0)


        def terminalDecl(self):
            return self.getTypedRuleContext(FsmParser.TerminalDeclContext,0)


        def actionDecl(self):
            return self.getTypedRuleContext(FsmParser.ActionDeclContext,0)


        def transition(self):
            return self.getTypedRuleContext(FsmParser.TransitionContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = FsmParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.constDecl()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.contextDecl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.eventsDecl()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.statesDecl()
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.initialDecl()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.terminalDecl()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.actionDecl()
                pass
            elif token in [41]:
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.transition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.ty = None # Token

        def expr(self):
            return self.getTypedRuleContext(FsmParser.ExprContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FsmParser.ID)
            else:
                return self.getToken(FsmParser.ID, i)

        def getRuleIndex(self):
            return FsmParser.RULE_constDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDecl" ):
                return visitor.visitConstDecl(self)
            else:
                return visitor.visitChildren(self)




    def constDecl(self):

        localctx = FsmParser.ConstDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_constDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(FsmParser.T__1)
            self.state = 75
            localctx.name = self.match(FsmParser.ID)
            self.state = 76
            self.match(FsmParser.T__2)
            self.state = 77
            localctx.ty = self.match(FsmParser.ID)
            self.state = 78
            self.match(FsmParser.T__3)
            self.state = 79
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.FieldContext)
            else:
                return self.getTypedRuleContext(FsmParser.FieldContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_contextDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContextDecl" ):
                return visitor.visitContextDecl(self)
            else:
                return visitor.visitChildren(self)




    def contextDecl(self):

        localctx = FsmParser.ContextDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_contextDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(FsmParser.T__4)
            self.state = 82
            self.match(FsmParser.T__5)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 83
                self.field()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7 or _la==41:
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==7:
                        self.state = 84
                        self.match(FsmParser.T__6)


                    self.state = 87
                    self.field()
                    self.state = 92
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 95
            self.match(FsmParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.ty = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FsmParser.ID)
            else:
                return self.getToken(FsmParser.ID, i)

        def expr(self):
            return self.getTypedRuleContext(FsmParser.ExprContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField" ):
                return visitor.visitField(self)
            else:
                return visitor.visitChildren(self)




    def field(self):

        localctx = FsmParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            localctx.name = self.match(FsmParser.ID)
            self.state = 98
            self.match(FsmParser.T__2)
            self.state = 99
            localctx.ty = self.match(FsmParser.ID)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 100
                self.match(FsmParser.T__3)
                self.state = 101
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventsDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventSig(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.EventSigContext)
            else:
                return self.getTypedRuleContext(FsmParser.EventSigContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_eventsDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventsDecl" ):
                return visitor.visitEventsDecl(self)
            else:
                return visitor.visitChildren(self)




    def eventsDecl(self):

        localctx = FsmParser.EventsDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_eventsDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(FsmParser.T__8)
            self.state = 105
            self.match(FsmParser.T__5)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==41:
                self.state = 106
                self.eventSig()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==7 or _la==41:
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==7:
                        self.state = 107
                        self.match(FsmParser.T__6)


                    self.state = 110
                    self.eventSig()
                    self.state = 115
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 118
            self.match(FsmParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventSigContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(FsmParser.ParamsContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_eventSig

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventSig" ):
                return visitor.visitEventSig(self)
            else:
                return visitor.visitChildren(self)




    def eventSig(self):

        localctx = FsmParser.EventSigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_eventSig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            localctx.name = self.match(FsmParser.ID)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 121
                self.match(FsmParser.T__9)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==41:
                    self.state = 122
                    self.params()


                self.state = 125
                self.match(FsmParser.T__10)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FsmParser.ParamContext)
            else:
                return self.getTypedRuleContext(FsmParser.ParamContext,i)


        def getRuleIndex(self):
            return FsmParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = FsmParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.param()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 129
                self.match(FsmParser.T__6)
                self.state = 130
                self.param()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.ty = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FsmParser.ID)
            else:
                return self.getToken(FsmParser.ID, i)

        def getRuleIndex(self):
            return FsmParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = FsmParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            localctx.name = self.match(FsmParser.ID)
            self.state = 137
            self.match(FsmParser.T__2)
            self.state = 138
            localctx.ty = self.match(FsmParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatesDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(FsmParser.IdListContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_statesDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatesDecl" ):
                return visitor.visitStatesDecl(self)
            else:
                return visitor.visitChildren(self)




    def statesDecl(self):

        localctx = FsmParser.StatesDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statesDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(FsmParser.T__11)
            self.state = 141
            self.idList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(FsmParser.IdListContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_initialDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitialDecl" ):
                return visitor.visitInitialDecl(self)
            else:
                return visitor.visitChildren(self)




    def initialDecl(self):

        localctx = FsmParser.InitialDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_initialDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(FsmParser.T__12)
            self.state = 144
            self.idList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminalDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(FsmParser.IdListContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_terminalDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminalDecl" ):
                return visitor.visitTerminalDecl(self)
            else:
                return visitor.visitChildren(self)




    def terminalDecl(self):

        localctx = FsmParser.TerminalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_terminalDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(FsmParser.T__13)
            self.state = 147
            self.idList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FsmParser.ID)
            else:
                return self.getToken(FsmParser.ID, i)

        def getRuleIndex(self):
            return FsmParser.RULE_idList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = FsmParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(FsmParser.ID)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 150
                self.match(FsmParser.T__6)
                self.state = 151
                self.match(FsmParser.ID)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def block(self):
            return self.getTypedRuleContext(FsmParser.BlockContext,0)


        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(FsmParser.ParamsContext,0)


        def getRuleIndex(self):
            return FsmParser.RULE_actionDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActionDecl" ):
                return visitor.visitActionDecl(self)
            else:
                return visitor.visitChildren(self)




    def actionDecl(self):

        localctx = FsmParser.ActionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_actionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(FsmParser.T__14)
            self.state = 158
            localctx.name = self.match(FsmParser.ID)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 159
                self.match(FsmParser.T__9)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==41:
                    self.state = 160
                    self.params()


                self.state = 163
                self.match(FsmParser.T__10)


            self.state = 166
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return FsmParser.RULE_transition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SelfTransitionContext(TransitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FsmParser.TransitionContext
            super().__init__(parser)
            self.source = None # Token
            self.copyFrom(ctx)

        def DASHES(self):
            return self.getToken(FsmParser.DASHES, 0)
        def triggers(self):
            return self.getTypedRuleContext(FsmParser.TriggersContext,0)

        def ARROW(self):
            return self.getToken(FsmParser.ARROW, 0)
        def calls(self):
            return self.getTypedRuleContext(FsmParser.CallsContext,0)

        def ID(self):
            return self.getToken(FsmParser.ID, 0)
        def guard(self):
            return self.getTypedRuleContext(FsmParser.GuardContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelfTransition" ):
                return visitor.visitSelfTransition(self)
            else:
                return visitor.visitChildren(self)


    class IgnoreTransitionContext(TransitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FsmParser.TransitionContext
            super().__init__(parser)
            self.source = None # Token
            self.copyFrom(ctx)

        def DASHES(self):
            return self.getToken(FsmParser.DASHES, 0)
        def triggers(self):
            return self.getTypedRuleContext(FsmParser.TriggersContext,0)

        def ID(self):
            return self.getToken(FsmParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIgnoreTransition" ):
                return visitor.visitIgnoreTransition(self)
            else:
                return visitor.visitChildren(self)


    class MoveTransitionContext(TransitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a FsmParser.TransitionContext
            super().__init__(parser)
            self.source = None # Token
            self.target = None # Token
            self.copyFrom(ctx)

        def DASHES(self):
            return self.getToken(FsmParser.DASHES, 0)
        def triggers(self):
            return self.getTypedRuleContext(FsmParser.TriggersContext,0)

        def ARROW(self):
            return self.getToken(FsmParser.ARROW, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FsmParser.ID)
            else:
                return self.getToken(FsmParser.ID, i)
        def guard(self):
            return self.getTypedRuleContext(FsmParser.GuardContext,0)

        def calls(self):
            return self.getTypedRuleContext(FsmParser.CallsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMoveTransition" ):
                return visitor.visitMoveTransition(self)
            else:
                return visitor.visitChildren(self)



    def transition(self):

        localctx = FsmParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_transition)
        self._la = 0 # Token type
        try:
            self.state = 193
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
            if la_ == 1:
                localctx = FsmParser.MoveTransitionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                localctx.source = self.match(FsmParser.ID)
                self.state = 169
                self.match(FsmParser.DASHES)
                self.state = 170
                self.triggers()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18 or _la==19:
                    self.state = 171
                    self.guard()


                self.state = 174
                self.match(FsmParser.ARROW)
                self.state = 175
                localctx.target = self.match(FsmParser.ID)
                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==21:
                    self.state = 176
                    self.calls()


                pass

            elif la_ == 2:
                localctx = FsmParser.SelfTransitionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                localctx.source = self.match(FsmParser.ID)
                self.state = 180
                self.match(FsmParser.DASHES)
                self.state = 181
                self.triggers()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18 or _la==19:
                    self.state = 182
                    self.guard()


                self.state = 185
                self.match(FsmParser.ARROW)
                self.state = 186
                self.calls()
                pass
